@@ -27,6 +27,7 @@
 	<property type="hidden" name="HavePackage" default="1"/>
 	<property type="hidden" name="PackageModule1" default="libgnome-2.0 >= 2.14 libgnomeui-2.0 >= 2.14 libglade-2.0 >= 2.6.0"/>
 	<property type="boolean" name="HaveLangCPP" _label="Add C++ support:" _description="Adds c++ support to the project so that c++ source files can be built" default="0"/>
+	<property type="boolean" name="HaveGlade" _label="Use libglade for the UI" _description="Use the libglade-2.0 library to load .glade at runtime" default="1"/>
 	<property type="boolean" name="HaveI18n" _label="Add internationalization:" _description="Adds supports for internationalization so that your project can have translations in different languages" default="1"/>
 	<property type="boolean" name="HaveSharedlib" _label="Add shared library support:" _description="Adds supports for building shared libraries in your project" default="1"/>
 	<property type="boolean" name="HaveGtkDoc" _label="Add gtk-doc system:" _description="gtk-doc is used to compile API documentations for GObject based classes" default="0"/>
@@ -70,7 +71,9 @@
 			<file source="main.c"/>
 			<file source="callbacks.c"/>
 			<file source="callbacks.h"/>
+			[+IF (=(get "HaveGlade") "1")+]
 			<file source="project.glade" destination="[+NameLower+].glade"/>
+			[+ENDIF+]
 			<file source="Makefile.am.tpl" destination="Makefile.am"/>
 		</directory>
 	</directory>
