@@ -62,7 +62,9 @@ char *s = N_("Require SDL_ttf library");
 char *s = N_("Require SDL_ttf:");
 char *s = N_("Select code license");
 char *s = N_("Shell values to watch");
+char *s = N_("Use libglade for the UI");
 char *s = N_("Use pkg-config to add library supports from other packages");
+char *s = N_("Use the libglade-2.0 library to load .glade at runtime");
 char *s = N_("Value Name:");
 char *s = N_("Values to watch");
 char *s = N_("Version:");
